Set up a simple grid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div class="text">
+            <h1>Simple grid</h1>
+            <p>
+                This simple grid was made using the grid-template property, in which the width of the columns is not fixed but set to auto.
+                The rows do have a fixed height, which means that each of the children has a 120px height.
+            </p>
+        </div>
+        <div class="simple-grid">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+        </div>
+    </div>
 </body>
 </html>
