--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
             <div class="card">Card 3</div>
             <div class="card">Card 4</div>
         </div>
+        <div class="text">
+            <h1>Harder grid</h1>
+            <p>
+                This simple grid was made using the grid-template property, in which the width of the columns is not fixed but set to auto.
+                The rows do have a fixed height, which means that each of the children has a 120px height.
+            </p>
+        </div>
+        <div class="harder-grid">
+            <div class="red">0</div>
+            <div class="red">1</div>
+            <div class="red">2</div>
+            <div class="red">3</div>
+            <div class="red">4</div>
+            <div class="red">5</div>
+            <div class="red">6</div>
+            <div class="red">7</div>
+            <div class="red">8</div>
+            <div class="red">9</div>
+            <div class="red">10</div>
+            <div class="red">11</div>
+            <div class="red">12</div>
+            <div class="red">13</div>
+        </div>
     </div>
 </body>
 </html>
