--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <div class="text">
             <h1>Harder grid</h1>
             <p>
-                This simple grid was made using the grid-template property, in which the width of the columns is not fixed but set to auto.
-                The rows do have a fixed height, which means that each of the children has a 120px height.
+                This harder grid was made using the grid-template property, in which the width of the columns is not fixed but set to 1fr.
             </p>
         </div>
         <div class="harder-grid">
-            <div class="red">0</div>
             <div class="red">1</div>
             <div class="red">2</div>
             <div class="red">3</div>
@@ -41,7 +39,6 @@
             <div class="red">10</div>
             <div class="red">11</div>
             <div class="red">12</div>
-            <div class="red">13</div>
         </div>
     </div>
 </body>
